--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,14 @@
 # main links
 main:
-  - title: "Category"
-    url: /categories/
-  - title: "Tag"
-    url: /tags/
-  - title: "By Year"
-    url: /year-archive/
-  - title: "Search"
+  - title: "검색"
     url: /search/
+  - title: "카테고리"
+    url: /categories/
+  - title: "태그"
+    url: /tags/
+  - title: "연도"
+    url: /year-archive/
+
 
 docs:
   - title: "대목차1"
